test/ill-formed/0178_incomplete_struct_in_local_var.c
void f ()
{
  struct s;
  struct s *x = 0;
  struct s { double *p; };
  x->p = 0;
}
